--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "write-json-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
