--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chance": "^1.1.9",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
