--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "bootstrap": "^5.3.3",
     "chance": "^1.1.9",
     "chart.js": "^4.4.3",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
