--- a/package.json
+++ b/package.json
@@ -9,25 +9,17 @@
     "@mui/lab": "5.0.0-alpha.106",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.6",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@tabler/icons": "^1.84.0",
-    "@tabler/icons-react": "^3.33.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^4.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "chance": "^1.1.9",
     "chart.js": "^4.4.3",
-    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.3.7",
-    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -36,10 +28,8 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-spring": "^9.2.4",
-    "styled-components": "^6.1.18",
     "stylis-plugin-rtl": "^2.0.2",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
